[gd_scene load_steps=4 format=3 uid="uid://dvgmv6x8gpyno"]

[ext_resource type="Script" uid="uid://chb3qje6jj1bt" path="res://scripts/valve.gd" id="1_1gvkl"]
[ext_resource type="Texture2D" uid="uid://mb6r3ssw24vj" path="res://icon.svg" id="2_imjx4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4qx4"]
radius = 32.0

[node name="Valve" type="Node2D"]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
script = ExtResource("1_1gvkl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6.10352e-05, -3.05176e-05)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("2_imjx4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_x4qx4")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
